# chatbot_template

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  entrypoint.sh  example.env  pyproject.toml  requirements.txt
app/: __init__.py  root_agent.py
google_adk/: .dockerignore  README.md  docker-compose.yml  pyproject.toml
google_adk/app/: root_agent.py
microsoft_af/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
microsoft_af/joker_agent/: agent.py  example.env
